Added all existing APIs in swagger.json and QRcodeImage change done
